--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,13 +1,12 @@
-$color: #00FF00;
-$blue: #E2E3E4;
+$color: #00ff00;
+$blue: #e2e3e4;
 
 body {
-  background-image: url('./img/lol.gif'),
-    url('./img/bears.png'),
+  background-color: $blue;
+  background-image: url('./img/lol.gif'), url('./img/bears.png'),
     url('./img/in-progress.png');
   background-repeat: no-repeat;
   color: $color;
-  background-color: $blue;
 }
 
 input::placeholder {
@@ -17,6 +16,6 @@ input::placeholder {
 .text {
   position: relative;
   left: 20px;
-  border: 1px solid $color;
   color: $color;
+  border: 1px solid $color;
 }
