--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -1,6 +1,11 @@
-doctype html
-html
- head
+extends ../layout/main.pug
 
- body
-  h1 hello
+block variables
+  -
+    var title = 'HOME PAGE'
+
+block content
+  div HOME PAGE
+  +item({title: 'item 1', text: 'item 1 text'})
+  +item({title: 'item 2', text: 'item 2 text'})
+  +item({title: 'item 3', text: 'item 3 text'})
