--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -1,14 +1,21 @@
-include ../utils/mixins.pug
+extends ../data/global.pug
 
-block variables
+block layout
+  include ../utils/mixins.pug
 
-<!DOCTYPE html>
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title #{title}
-    block head
-  body
-    block content
+  block variables
+
+  <!DOCTYPE html>
+  html(lang="ru")
+    head
+      meta(charset="UTF-8")
+      meta(name="viewport", content="width=device-width, initial-scale=1.0")
+      meta(http-equiv="X-UA-Compatible", content="ie=edge")
+      title #{title}
+      block head
+    body
+      #header
+      div
+        a(href="/home.html") Home
+        a(href="/about.html") About
+      block content
