--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -2,7 +2,7 @@ extends ../layout/main.pug
 
 block variables
   -
-    var title = 'HOME PAGE'
+    var title = 'HOME PAGE!!'
 
 block content
   div #{test}
