--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -16,6 +16,6 @@ block layout
     body
       #header
       div
-        a(href="/home.html") Home
-        a(href="/about.html") About
+        a(href="./home.html") Home
+        a(href="./about.html") About
       block content
