--- a/src/assets/scss/components/item.scss
+++ b/src/assets/scss/components/item.scss
@@ -3,6 +3,7 @@
   width: 300px;
   margin: 20px;
   padding: 20px;
+  background-color: lightcoral;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
 
   &:before {
